<resources>
    <string name="app_name">Jog On</string>
    <string name="title_location_permission">Location Permission</string>
    <string name="text_location_permission">Location is required to get the weather for your area.</string>
    <string name="grant_permission">Grant permission</string>
    <string name="deny">Deny</string>
    <string name="weatherImage">weatherImage</string>
    <string name="weather_forecast">Upcoming Weather Forecast</string>
    <string name="wind_speed">Wind Speed:\u0020</string>
    <string name="temp">Temp:\u0020</string>
    <string name="feels_like">Feels Like:\u0020</string>
    <string name="sunrise">Sunrise:\u0020</string>
    <string name="sunset">Sunset:\u0020</string>
    <string name="cloud_coverage">Cloud Coverage:\u0020</string>
    <string name="precipitation">Precipitation:\u0020</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="placeholder_help_text">Placeholder help text</string>
    <string name="select_preferred_time_range">Select preferred time range</string>
    <string name="to">to</string>
    <string name="save">Save</string>
    <string name="time_window_selection">Time Window Selection</string>
    <string name="weather_preferences">Weather Preferences (drag to reorder preferences)</string>
    <string name="drag_icon">Drag icon</string>
    <string name="custom_order">Custom order</string>
    <string name="order_by_time">Order by time</string>
    <string name="clothes">Clothes</string>
    <string name="hivisvest">HiVisVest</string>
    <string name="weather_settings">Weather Settings</string>
    <string name="home">Home</string>
    <string name="time_settings">Time Settings</string>
    <string name="about_collapsed">About</string>
    <string name="about_expanded">Jog On has been designed to provide suggestions on weather conditions and appropriate clothing for running.</string>
    <string name="howToUse_collapsed">How to use</string>
    <string name="howToUse_expanded">You can select a time window to go for a run and customise your weather preferences.\n\nJog On will then display the current weather conditions and display a list of the best times for your run and suggestions on what to wear.</string>
    <string name="settingsTimeHelp_collapsed">Time Settings</string>
    <string name="settingsTimeHelp_expanded">From the Home page, you can click on the Settings cog in the top right.\n\nFrom here, you can select your preferred time window from a defined list or specify your own time window.\nClick save to apply changes and click the Home icon to return to the main page.</string>
    <string name="settingsWeatherHelp_collapsed">Weather Settings</string>
    <string name="settingsWeatherHelp_expanded">From the Home page, you can click on the Settings cog in the top right.\n\nFrom here, you can select your preferred weather conditions. Select if you want the results arranged by nearest time or by your own preference\nIf selecting your own preferences, drag and drop the various weather conditons in order of preference, with the most preferred at the top and least at the bottom.\n\nClick save to apply changes and click the Home icon to return to the main page</string>
    <string name="contact_collapsed">Get in Touch</string>
    <string name="contact_expanded">Click on the email icon in the menu bar to contact the developer with any questions, issues, feedback or suggestions.</string>
</resources>