<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="100dp"
    android:layout_height="wrap_content">

    <item
        android:id="@+id/menu_home"
        android:icon="@drawable/home"
        android:title="@string/home"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/settings"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_help"
        android:icon="@drawable/ic_help"
        android:title="@string/help"
        app:iconTint="@color/primaryDarkColor"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_email"
        android:icon="@drawable/email"
        android:title="@string/contact"
        app:iconTint="@color/primaryDarkColor"
        app:showAsAction="ifRoom" />
</menu>