<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="10dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="10dp"
    tools:context=".activities.MainActivity"
    android:orientation="vertical">


    <!--city label -->
    <TextView
        android:layout_gravity="center"
        android:id="@+id/cityText"
        android:textAppearance="?attr/textAppearanceSubtitle2"
        style="?android:attr/textAppearanceLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:textAppearance="?attr/textAppearanceSubtitle2"
        style="?android:attr/textAppearanceMedium"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/currentWeatherLabel" />

    <com.google.android.material.card.MaterialCardView
        card_view:contentPadding="10dp"
        card_view:cardPreventCornerOverlap="false"
        card_view:cardUseCompatPadding="true"
        card_view:cardCornerRadius="4dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- Image weather condition -->
        <ImageView
            android:id="@+id/condIcon"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_gravity="end"
            android:contentDescription="@string/weatherImage" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:textAppearance="?attr/textAppearanceSubtitle2"
                    android:textStyle="bold"
                    android:id="@+id/currentDesc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:labelFor="@+id/currentTemp"
                    android:text="@string/temp" />

                <TextView
                    android:id="@+id/currentTemp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:labelFor="@+id/currentFeels"
                    android:text="@string/feels_like" />

                <TextView
                    android:id="@+id/currentFeels"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:labelFor="@+id/sunrise"
                    android:text="@string/sunrise" />

                <TextView
                    android:id="@+id/sunrise"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:labelFor="@+id/sunset"
                    android:text="@string/sunset" />

                <TextView
                    android:id="@+id/sunset"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                   android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:labelFor="@+id/clouds"
                    android:text="@string/cloud_coverage" />

                <TextView
                    android:id="@+id/clouds"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:labelFor="@+id/currentWind"
                    android:text="@string/wind_speed" />

                <TextView
                    android:id="@+id/currentWind"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <Space
        android:layout_width="1dp"
        android:layout_height="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:textAppearance="?attr/textAppearanceSubtitle2"
        style="?android:attr/textAppearanceMedium"
        android:layout_gravity="center"
        android:text="@string/weather_forecast"
        android:layout_height="wrap_content" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview_rootview"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>